# assertive-mock-api

./: AGENTS.md  Dockerfile  FEATURES.md  README.md  TODO.md  compose.yaml  makefile  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  client-release.yml  deploy-docs.yml  docs-pages.yml  release.yml  server-release.yml
client/: pyproject.toml
client/assertive_mock_api_client/: client.py
client/tests/: test_scoped_client.py
dev/init.d/: stubs.json
docs/: getting-started.md  index.md  stubs-and-assertions.md
docs/client/: advanced-scopes.md  overview.md  scopes.md  sessions.md
docs/examples/: e2e.md
docs/server/: admin-pages.md  docker-compose.md  matching-scenarios.md  overview.md  usage.md
server/: pyproject.toml
server/assertive_mock_api_server/: app.py  container.py  core.py  path_matching.py  payloads.py  templating.py
server/assertive_mock_api_server/templates/admin/: _requests.html  _scopes.html  _stubs.html  index.html  scope_detail.html  stub_create.html  stub_detail.html
tests/: conftest.py  test_admin_ui.py  test_assertion_path_behavior.py  test_catch_all_refactor.py  test_chaos_delays.py  test_connection_drop_faults.py  test_init_stubs.py  test_path_matching.py  test_scoped_client.py  test_scopes.py  test_session_client.py  test_sse_encoding.py  test_sse_responses.py  test_sse_templating.py  test_stub_matching.py  test_templated_responses.py  test_templating.py
