[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "assertive-mock-api-client"
version = "1.1.0"
description = "Client package for assertive mock API"
requires-python = ">=3.10"
dependencies = [
    "assertive>=1.2.0",
    "httpx>=0.28.1",
    "pydantic>=2.11.3",
]
