[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "assertive-mock-api-client"
version = "1.4.0"
description = "Client package for assertive mock API"
keywords = ["mock-api", "api-testing", "http-client", "test-automation", "contract-testing"]
requires-python = ">=3.10"
dependencies = [
    "assertive>=1.2.0",
    "httpx>=0.28.1",
    "pydantic>=2.11.3",
]

[project.urls]
Homepage = "https://peter-daly.github.io/assertive-mock-api/"
Documentation = "https://peter-daly.github.io/assertive-mock-api/"
Repository = "https://github.com/peter-daly/assertive-mock-api"
