[project]
name = "assertive-mock-api-server"
version = "1.3.0"
description = "Assertive mock API server"
keywords = ["mock-api", "api-testing", "fastapi", "stub-server", "contract-testing"]
requires-python = ">=3.10"
dependencies = [
    "assertive>=1.2.0",
    "clean-ioc>=1.15.0",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pydantic>=2.11.3",
    "uvicorn>=0.34.1",
]

[project.urls]
Homepage = "https://peter-daly.github.io/assertive-mock-api/"
Documentation = "https://peter-daly.github.io/assertive-mock-api/"
Repository = "https://github.com/peter-daly/assertive-mock-api"
